Fix: Increase chart height on mobile

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -161,7 +161,7 @@
         </div>
 
         <!-- Right Column (Chart) -->
-        <div class="flex-1 card p-2 flex flex-col h-96 lg:h-auto">
+        <div class="flex-1 card p-2 flex flex-col h-[60vh] lg:h-auto">
             <div class="tradingview-widget-container h-full w-full flex-grow">
               <div id="tradingview_chart" class="h-full w-full"></div>
             </div>
