--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -161,8 +161,8 @@
         </div>
 
         <!-- Right Column (Chart) -->
-        <div class="flex-1 card p-2 flex flex-col h-[60vh] lg:h-auto">
-            <div class="tradingview-widget-container h-full w-full flex-grow">
+        <div class="flex-1 card p-2 flex flex-col min-h-[60vh] lg:min-h-full">
+            <div class="tradingview-widget-container h-full w-full">
               <div id="tradingview_chart" class="h-full w-full"></div>
             </div>
         </div>
