Fix: Isolate chart height control to JavaScript

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -160,8 +160,8 @@
         </div>
 
         <!-- Right Column (Chart) -->
-        <div class="flex-1 card p-2 flex flex-col h-[70vh] lg:h-auto">
-            <div class="tradingview-widget-container h-full w-full">
+        <div class="flex-1 card p-2 flex flex-col">
+            <div class="tradingview-widget-container h-full w-full flex-grow">
               <div id="tradingview_chart" class="h-full w-full"></div>
             </div>
         </div>
