Fix: Refactor chart card structure for proper padding

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -160,10 +160,8 @@
         </div>
 
         <!-- Right Column (Chart) -->
-        <div class="flex-1 card flex flex-col overflow-hidden">
-            <div class="tradingview-widget-container h-full w-full flex-grow">
-              <div id="tradingview_chart" class="h-full w-full"></div>
-            </div>
+        <div class="flex-1 card flex flex-col">
+            <div id="tradingview_chart" class="h-full w-full"></div>
         </div>
     </div>
     </div>
