Fix: Final structural fix for chart padding

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -160,8 +160,10 @@
         </div>
 
         <!-- Right Column (Chart) -->
-        <div class="flex-1 card flex flex-col">
-            <div id="tradingview_chart" class="h-full w-full"></div>
+        <div class="flex-1 card p-0 flex flex-col">
+            <div class="p-4 h-full w-full">
+                <div id="tradingview_chart" class="h-full w-full"></div>
+            </div>
         </div>
     </div>
     </div>
@@ -240,8 +242,7 @@
                 },
 
                 loadTradingViewChart() {
-                    const isMobile = window.innerWidth < 1024; // lg breakpoint
-                    const widgetOptions = {
+                    new TradingView.widget({
                         "autosize": true,
                         "symbol": `BINANCE:{{ symbol.replace('/', '') }}`,
                         "interval": "5",
@@ -253,14 +254,7 @@
                         "hide_side_toolbar": false,
                         "allow_symbol_change": true,
                         "container_id": "tradingview_chart"
-                    };
-
-                    if (isMobile) {
-                        widgetOptions.height = window.innerHeight * 0.7;
-                        widgetOptions.autosize = false;
-                    }
-
-                    new TradingView.widget(widgetOptions);
+                    });
                 }
             }
         }
