--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -178,7 +178,7 @@
                                 <template x-for="[key, value] in Object.entries(strategyParams)" :key="key">
                                     <tr class="hover:bg-gray-800/50">
                                         <td class="px-3 py-3 font-semibold text-gray-300" x-text="key.replace(/_/g, ' ').replace(/\b\w/g, l => l.toUpperCase())"></td>
-                                        <td class="px-3 py-3 font-mono" x-text="value"></td>
+                                        <td class="px-3 py-3 font-mono" x-text="key === 'trading_fee' ? (value * 100).toFixed(4) + '%' : value"></td>
                                     </tr>
                                 </template>
                                 <tr x-show="Object.keys(strategyParams).length === 0">
